# bot-belajar

./: .env.example  Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml
open_notebook/: exceptions.py
open_notebook/ai/: models.py
open_notebook/database/: __init__.py  migrate.py  repository.py
open_notebook/domain/: __init__.py  base.py  models.py
open_notebook/processing/: __init__.py  content.py  podcast.py
pages/: __init__.py  chat.py  models.py  notebooks.py  notes.py  podcast.py  settings.py  sources.py
